# LinuxZones

./: .gitattributes  .gitignore  CLAUDE.md  README.md  build-deb.sh  daemon.py  editor.py  install.sh  linuxzones.py  linuxzones.service  overlay.py  pyproject.toml  requirements.txt  zones.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
linuxzones/: __main__.py  daemon.py  editor.py  overlay.py  zones.py
tests/: conftest.py  test_daemon_modifier.py  test_daemon_state_machine.py  test_editor.py  test_margin_snap.py  test_record_filter.py  test_zone_nav.py  test_zone_overlap.py  test_zones_config.py
