[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "linuxzones"
version = "0.1.11"
requires-python = ">=3.10"
dependencies = []
# Runtime deps are system packages, not pip:
#   python3-xlib, python3-tk, python3-pil (Pillow), wmctrl

[project.scripts]
linuxzones = "linuxzones.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=7", "python-xlib>=0.33", "Pillow>=9.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["linuxzones*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
pythonpath = ["."]
