[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "linuxzones"
version = "0.1.17"
requires-python = ">=3.10"
dependencies = [
    "python-xlib>=0.33",
    "Pillow>=9.0",
]
# tkinter and wmctrl are NOT pip-installable and must come from the system:
#   tkinter  → python3-tk (apt) / python3-tkinter (dnf) / tk (pacman)
#   wmctrl   → wmctrl (all package managers)

[project.scripts]
linuxzones = "linuxzones.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["linuxzones*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
pythonpath = ["."]
